airflow/logs/dag_id=postgres_operator_dag/run_id=manual__2022-11-26T221430.701573+0000/task_id=create_businesses_table/attempt=1.log
[2022-11-26T22:14:32.358+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag.create_businesses_table manual__2022-11-26T22:14:30.701573+00:00 [queued]>
[2022-11-26T22:14:32.372+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag.create_businesses_table manual__2022-11-26T22:14:30.701573+00:00 [queued]>
[2022-11-26T22:14:32.373+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-26T22:14:32.374+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-11-26T22:14:32.374+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-26T22:14:32.390+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_businesses_table> on 2022-11-26 22:14:30.701573+00:00
[2022-11-26T22:14:32.395+0000] {standard_task_runner.py:54} INFO - Started process 11914 to run task
[2022-11-26T22:14:32.398+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag', 'create_businesses_table', 'manual__2022-11-26T22:14:30.701573+00:00', '--job-id', '40', '--raw', '--subdir', 'DAGS_FOLDER/create_db.py', '--cfg-path', '/tmp/tmp1xxz0wm_']
[2022-11-26T22:14:32.399+0000] {standard_task_runner.py:83} INFO - Job 40: Subtask create_businesses_table
[2022-11-26T22:14:32.400+0000] {dagbag.py:525} INFO - Filling up the DagBag from /opt/***/dags/create_db.py
[2022-11-26T22:14:33.185+0000] {task_command.py:384} INFO - Running <TaskInstance: postgres_operator_dag.create_businesses_table manual__2022-11-26T22:14:30.701573+00:00 [running]> on host cb45f2305923
[2022-11-26T22:14:33.245+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=postgres_operator_dag
AIRFLOW_CTX_TASK_ID=create_businesses_table
AIRFLOW_CTX_EXECUTION_DATE=2022-11-26T22:14:30.701573+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-26T22:14:30.701573+00:00
[2022-11-26T22:14:33.253+0000] {base.py:71} INFO - Using connection ID '***_db' for task execution.
[2022-11-26T22:14:33.259+0000] {sql.py:315} INFO - Running statement: -- create businesses table
CREATE TABLE IF NOT EXISTS businesses (
    business_id VARCHAR(50) PRIMARY KEY,
        name VARCHAR(50),
        url VARCHAR(250),
        address VARCHAR(50),
        city VARCHAR(50),
        state VARCHAR(50),
        postal_code INT,
        review_count INT,
        rating FLOAT,
        price VARCHAR(50));

CREATE TABLE IF NOT EXISTS categories(
        category_id SERIAL PRIMARY KEY,
        alias VARCHAR(50),
        title VARCHAR(50)
    );

CREATE TABLE IF NOT EXISTS business_categories(
        id SERIAL PRIMARY KEY,
        business_id VARCHAR(50),
        category_id INT
    );

CREATE TABLE IF NOT EXISTS {MOBILE_FRIENDLY_TABLE_NAME}(
        business_id VARCHAR PRIMARY KEY,
        mobile_friendliness BOOLEAN,
        screenshot VARCHAR,
        last_updated TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
    );

CREATE TABLE IF NOT EXISTS {MOBILE_FRIENDLY_ISSUES_TABLE_NAME}(
        id SERIAL PRIMARY KEY,
        business_id VARCHAR(50),
        mobileFriendlyIssues VARCHAR,
        last_updated TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
    );
, parameters: None
[2022-11-26T22:14:33.262+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 26: CREATE TABLE IF NOT EXISTS {MOBILE_FRIENDLY_TABLE_NAME}(
                                    ^

[2022-11-26T22:14:33.270+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=***_operator_dag, task_id=create_businesses_table, execution_date=20221126T221430, start_date=20221126T221432, end_date=20221126T221433
[2022-11-26T22:14:33.282+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 40 for task create_businesses_table (syntax error at or near "{"
LINE 26: CREATE TABLE IF NOT EXISTS {MOBILE_FRIENDLY_TABLE_NAME}(
                                    ^
; 11914)
[2022-11-26T22:14:33.333+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-26T22:14:33.350+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
